--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>Wel come to my new app</title>
 </head>
 <body>
-<p>Trying to do a new project</p>
+<h1>My First Project</h1>
+<input type="text"></input>
+<button type="submit">Submit</button>
 </body>
 </html>
