--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 </head>
 <body style="background-color:orange;text-align:center;">
 <h1 style="color:green;">Try Your Luck</h1>
-<input id="txt" placeholder="Type in your name" type="text"></input>
+<p><input id="txt" placeholder="Type in your name" type="text"></input></p>
 
-<input id="d1" placeholder="1 to 100"  type="number"></input>
-<input id="d2" placeholder="1 to 100"  type="number"></input>
-<input id="d3" placeholder="1 to 100" type="number"></input>
+<p><input id="d1" placeholder="1 to 100"  type="number"></input></p>
+<p><input id="d2" placeholder="1 to 100"  type="number"></input></p>
+<p><input id="d3" placeholder="1 to 100" type="number"></input></p>
 
 
 <p id="name"></p>
